--- a/PantryPal/Base.lproj/Main.storyboard
+++ b/PantryPal/Base.lproj/Main.storyboard
@@ -12,10 +12,10 @@
         </array>
     </customFonts>
     <scenes>
-        <!--Login View Controller-->
+        <!--Lobby View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="PantryPal" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="LobbyViewController" customModule="PantryPal" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -65,10 +65,10 @@
             </objects>
             <point key="canvasLocation" x="1104.5801526717557" y="-77.464788732394368"/>
         </scene>
-        <!--Sign In View Controller-->
+        <!--Register View Controller-->
         <scene sceneID="RHI-ha-fBl">
             <objects>
-                <viewController id="hJV-t5-7dO" customClass="SignInViewController" customModule="PantryPal" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="hJV-t5-7dO" customClass="RegisterViewController" customModule="PantryPal" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="I8e-Gv-H8f">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -238,38 +238,38 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kX2-fu-A1h" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2422" y="-408"/>
+            <point key="canvasLocation" x="2298" y="-404"/>
         </scene>
-        <!--View Controller-->
+        <!--Sign In View Controller-->
         <scene sceneID="Sji-kh-ncn">
             <objects>
-                <viewController id="wdd-Md-3eb" sceneMemberID="viewController">
+                <viewController id="wdd-Md-3eb" customClass="SignInViewController" customModule="PantryPal" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="VV9-Sp-4qr">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="8cb-zw-WNO">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="8cb-zw-WNO" customClass="SigninStackView" customModule="PantryPal" customModuleProvider="target">
                                 <rect key="frame" x="26" y="153" width="341" height="239"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="Zmx-pn-tGN">
-                                        <rect key="frame" x="0.0" y="0.0" width="341" height="174.66666666666666"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="341" height="174"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="bn7-ut-hzO">
-                                                <rect key="frame" x="0.0" y="0.0" width="341" height="94.666666666666671"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="341" height="94"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="rHG-MJ-dGC">
-                                                        <rect key="frame" x="0.0" y="0.0" width="341" height="36.666666666666664"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="341" height="36"/>
                                                         <subviews>
                                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="2uw-Tc-A6T">
-                                                                <rect key="frame" x="0.0" y="0.0" width="341" height="25.666666666666668"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="341" height="25"/>
                                                                 <subviews>
                                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jo3-ub-c5g">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="24" height="25.666666666666668"/>
+                                                                        <rect key="frame" x="0.0" y="0.0" width="24" height="25"/>
                                                                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                         <state key="normal" image="email"/>
                                                                     </button>
                                                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="ENTER YOUR EMAIL" textAlignment="natural" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="HBH-Ie-tdA">
-                                                                        <rect key="frame" x="34" y="0.0" width="307" height="25.666666666666668"/>
+                                                                        <rect key="frame" x="34" y="0.0" width="307" height="25"/>
                                                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                                         <fontDescription key="fontDescription" name="Rubik-Medium" family="Rubik" pointSize="20"/>
                                                                         <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="next"/>
@@ -282,7 +282,7 @@
                                                                 </subviews>
                                                             </stackView>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0a7-9u-AhI" userLabel="Divider">
-                                                                <rect key="frame" x="0.0" y="35.666666666666657" width="341" height="1"/>
+                                                                <rect key="frame" x="0.0" y="35" width="341" height="1"/>
                                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="1" id="AzX-Ye-Jrn"/>
@@ -295,7 +295,7 @@
                                                         </constraints>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="tSJ-Ij-Dzg">
-                                                        <rect key="frame" x="0.0" y="56.666666666666657" width="341" height="38"/>
+                                                        <rect key="frame" x="0.0" y="56" width="341" height="38"/>
                                                         <subviews>
                                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="vY8-LY-ERd">
                                                                 <rect key="frame" x="0.0" y="0.0" width="341" height="27"/>
@@ -333,8 +333,8 @@
                                                     </stackView>
                                                 </subviews>
                                             </stackView>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zn4-qX-3Qn" customClass="LineButton" customModule="FirebaseDemo" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="124.66666666666669" width="341" height="50"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zn4-qX-3Qn">
+                                                <rect key="frame" x="0.0" y="124" width="341" height="50"/>
                                                 <color key="backgroundColor" red="0.18039215689999999" green="0.80000000000000004" blue="0.4431372549" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="6ZD-eU-PaU"/>
@@ -349,11 +349,14 @@
                                                         <real key="value" value="25"/>
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
+                                                <connections>
+                                                    <action selector="signIn" destination="wdd-Md-3eb" eventType="touchUpInside" id="RZT-cz-HsH"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4s2-Nu-s5m">
-                                        <rect key="frame" x="0.0" y="204.66666666666669" width="341" height="34.333333333333343"/>
+                                        <rect key="frame" x="0.0" y="204" width="341" height="35"/>
                                         <fontDescription key="fontDescription" name="Rubik-Medium" family="Rubik" pointSize="16"/>
                                         <state key="normal" title="FORGOT PASSWORD?">
                                             <color key="titleColor" red="0.93333333330000001" green="0.93333333330000001" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
@@ -363,6 +366,10 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="239" id="1QP-EX-dkw"/>
                                 </constraints>
+                                <connections>
+                                    <outlet property="emailTextField" destination="HBH-Ie-tdA" id="FKC-Ze-1OY"/>
+                                    <outlet property="passwordTextField" destination="EeT-hm-NiG" id="ptc-55-cMi"/>
+                                </connections>
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="NCF-51-bNx"/>
@@ -374,6 +381,9 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="5EN-eJ-rBq"/>
+                    <connections>
+                        <outlet property="signInStackView" destination="8cb-zw-WNO" id="OBM-mH-6rp"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="314-re-6fB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
