--- a/PantryPal/Views/FridgeList/FridgeList.storyboard
+++ b/PantryPal/Views/FridgeList/FridgeList.storyboard
@@ -3,40 +3,56 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Fridge List View Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController id="Y6W-OH-hqX" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="FridgeListViewController" id="Y6W-OH-hqX" customClass="FridgeListViewController" customModule="PantryPal" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="CGk-yN-EdC">
-                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <rect key="frame" x="0.0" y="109" width="393" height="709"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZES-9y-fQP">
+                                <rect key="frame" x="327" y="59" width="50" height="50"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal">
+                                    <color key="titleColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <imageReference key="image" image="plus" catalog="system" symbolScale="large"/>
+                                </state>
+                                <connections>
+                                    <action selector="created" destination="Y6W-OH-hqX" eventType="touchUpInside" id="uwM-Rb-BPt"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="CGk-yN-EdC" secondAttribute="trailing" id="0ay-pZ-0CP"/>
+                            <constraint firstItem="ZES-9y-fQP" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="6Oh-GG-A0e"/>
                             <constraint firstItem="CGk-yN-EdC" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="BVp-mV-YnB"/>
-                            <constraint firstItem="CGk-yN-EdC" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="b6K-UE-jmd"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="ZES-9y-fQP" secondAttribute="trailing" constant="16" id="C38-gX-ceh"/>
+                            <constraint firstItem="CGk-yN-EdC" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="50" id="b6K-UE-jmd"/>
+                            <constraint firstItem="CGk-yN-EdC" firstAttribute="top" secondItem="ZES-9y-fQP" secondAttribute="bottom" id="g1G-m5-UbW"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="CGk-yN-EdC" secondAttribute="bottom" id="oDZ-bv-NMt"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="132" y="-27"/>
+            <point key="canvasLocation" x="130.53435114503816" y="-27.464788732394368"/>
         </scene>
     </scenes>
     <resources>
+        <image name="plus" catalog="system" width="128" height="113"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
