--- a/PantryPal/Views/Fridge/FridgeTabBar.storyboard
+++ b/PantryPal/Views/Fridge/FridgeTabBar.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="aad-lk-p5V">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
@@ -9,7 +9,7 @@
         <!--Fridge Tab Bar Controller-->
         <scene sceneID="5ll-Sa-eS3">
             <objects>
-                <tabBarController storyboardIdentifier="FridgeTabBar" id="aad-lk-p5V" customClass="FridgeTabBarController" customModule="PantryPal" customModuleProvider="target" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="FridgeTabBarController" id="aad-lk-p5V" customClass="FridgeTabBarController" customModule="PantryPal" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="dRe-me-xM9">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
